--- a/app/src/main/res/layout/activity_scrambling.xml
+++ b/app/src/main/res/layout/activity_scrambling.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hello_world"
-            android:id="@+id/textView" />
+            android:id="@+id/scrambling_progress_dialog" />
 
     </LinearLayout>
 </ScrollView>
