--- a/app/src/main/res/layout/activity_scrambling.xml
+++ b/app/src/main/res/layout/activity_scrambling.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,15 +6,112 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.calvin.imgscramble.ScramblingActivity"
-    android:orientation="vertical">
+    tools:context="com.example.calvin.imgscramble.ScramblingActivity">
 
 
-    <ImageView
-        android:id="@+id/scrambling_output_image"
+    <RelativeLayout
+        android:id="@+id/scrambling_loading_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#000000"
-        android:padding="1dp"/>
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/scrambling_progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/scrambling_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/scrambling_progressBar"
+            android:layout_marginTop="30dp"
+            android:layout_toRightOf="@+id/scrambling_progressBar"
+            android:text="@string/scrambling_loading" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/scrambling_picture_parent_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="4">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/scrambling_output_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#000000"
+                android:padding="1dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/scrambling_quality"
+                    android:id="@+id/scrambling_quality_text"
+                    android:layout_gravity="center"/>
+
+                <SeekBar
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/scrambling_quality_seekBar"
+                    android:max="19" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/scrambling_save_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="scramblingSaveText"
+                    android:src="@drawable/ic_insert_drive_file_black_48dp" />
+
+                <ImageButton
+                    android:id="@+id/scrambling_save_to_file"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:longClickable="false"
+                    android:onClick="scramblingSaveImage"
+                    android:src="@drawable/ic_save_black_48dp" />
+
+                <ImageButton
+                    android:id="@+id/scrambling_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="scramblingShare"
+                    android:src="@drawable/ic_share_black_48dp" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
