--- a/app/src/main/res/layout/activity_scrambling.xml
+++ b/app/src/main/res/layout/activity_scrambling.xml
@@ -61,7 +61,13 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:orientation="vertical">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/scrambling_image_widthheight"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/scrambling_width_height"
+                android:gravity = "center"/>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -94,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="scramblingSaveText"
-                    android:src="@drawable/ic_insert_drive_file_black_48dp" />
+                    android:src="@drawable/ic_insert_drive_file_black_36dp" />
 
                 <ImageButton
                     android:id="@+id/scrambling_save_to_file"
@@ -102,16 +108,19 @@
                     android:layout_height="wrap_content"
                     android:longClickable="false"
                     android:onClick="scramblingSaveImage"
-                    android:src="@drawable/ic_save_black_48dp" />
+                    android:src="@drawable/ic_save_black_36dp" />
 
                 <ImageButton
                     android:id="@+id/scrambling_share"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="scramblingShare"
-                    android:src="@drawable/ic_share_black_48dp" />
+                    android:src="@drawable/ic_share_black_36dp" />
             </LinearLayout>
         </LinearLayout>
+
+
+
     </LinearLayout>
 
 </RelativeLayout>
