--- a/app/src/main/res/layout/fragment_scramble.xml
+++ b/app/src/main/res/layout/fragment_scramble.xml
@@ -88,14 +88,18 @@
                     android:hint="@string/scramble_columns"
                     android:inputType="number" />
 
-                <RadioGroup
-                    android:id="@+id/radio_group"
+                <LinearLayout
+                    android:id="@+id/radio_group_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/scramble_password"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:orientation="horizontal">
+                    <RadioGroup
+                        android:id="@+id/radio_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/scramble_radio_scramble"
@@ -109,7 +113,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/scramble_radio_descramble" />
-                </RadioGroup>
+                    </RadioGroup>
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:ems="10"
+                        android:id="@+id/scramble_image_width"
+                        android:layout_weight="1"
+                        android:hint="@string/scramble_image_width_hint" />
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:ems="10"
+                        android:id="@+id/scramble_image_height"
+                        android:layout_weight="1"
+                        android:hint="@string/scramble_image_height_hint" />
+
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/scramblebutton_layout"
@@ -117,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/radio_group"
+                    android:layout_below="@+id/radio_group_layout"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
