--- a/app/src/main/res/layout/fragment_scramble.xml
+++ b/app/src/main/res/layout/fragment_scramble.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="4">
+    android:weightSum="5">
 
     <RelativeLayout
         android:id="@+id/scrambleImageViewLayout"
@@ -17,16 +17,15 @@
         android:background="#000000"
         android:gravity="center">
 
+
         <ImageView
             android:id="@+id/scrambleImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:adjustViewBounds="true"
             android:clickable="true"
             android:onClick="scrambleGetImage"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:scaleType="centerInside"
             android:src="@drawable/add_image" />
 
@@ -34,16 +33,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/scramble_open_camera"
-            android:layout_alignBottom="@+id/scrambleImageView"
-            android:layout_alignRight="@+id/scrambleImageView"
             android:onClick="openCamera"
-            android:src="@drawable/ic_camera_alt_white_48dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_camera_alt_white_48dp" />
+
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <ScrollView
             android:id="@+id/scrollView"
